k8s/service-b/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: microservices
spec:
  selector:
    app: service-b
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
